--- a/package.json
+++ b/package.json
@@ -5,20 +5,22 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "framer": "unframer 3e9f5e2dfe1fa837 --watch --outDir src/framer",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "unframer": "^2.20.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
