add selection example

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev ",
     "build": "next build",
     "framer": "unframer 3e9f5e2dfe1fa837 --watch --outDir src/framer",
     "start": "next start",
